@@ -57,6 +57,8 @@ admin.caption.smtp.host=Server
 admin.caption.smtp.pass=Passwort
 admin.caption.smtp.user=Benutzername
 admin.caption.tableofcontents=Benutzer Inhaltsverzeichnis
+admin.caption.tableofcontentsdepth=Maximum table of contents depth
+admin.caption.tableofcontentsdepthhelp=Set this value from 1-6 to determine how much nesting is allowed within a topic's table of contents.
 admin.caption.uploaddir=Datei Upload Ordner (Webserver muss darauf zugreifen k\u00F6nnen)
 admin.caption.uploaddirhelp=Das Verzeichnis in dem hochgeladene Dateien (upload) gespeichert und wieder heruntergeladen (download) werden k\u00F6nnen.
 admin.caption.uploaddirrel=Relativer Pfad des Upload Ordner bzgl der Webserver Root.
